--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_configuracion_camioneta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_configuracion_camioneta.xml
@@ -19,11 +19,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/RVConfiguracionCamionetasCilindros"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-            </android.support.v7.widget.RecyclerView>
+                android:layout_height="wrap_content"
+                android:minHeight="300sp"></android.support.v7.widget.RecyclerView>
 
             <include
                 layout="@layout/campos_camionetas_footer"
