--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_iniciar_descarga.xml
@@ -12,8 +12,8 @@
             android:id="@+id/textTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15sp"
+            android:layout_marginBottom="15sp"
             android:gravity="center"
             android:text="@string/title_iniciar_descarga"
             android:textColor="@color/colorTextLogin"
@@ -30,8 +30,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="25sp"
+            android:layout_marginRight="15sp"
+            android:layout_marginBottom="25sp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="@string/spinner_num_compra"
@@ -42,9 +44,10 @@
             android:id="@+id/spinner_orden_compra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:layout_marginLeft="15sp"
+            android:layout_marginRight="15sp"
+            android:minHeight="50sp"
+            android:padding="20sp"
             android:textColor="@color/colorTextLogin"
             android:textSize="25sp" />
 
@@ -61,6 +64,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15sp"
+                android:layout_marginBottom="15sp"
                 android:layout_weight="1"
                 android:text="@string/tanque_prestado"
                 android:textColor="@color/colorTextLogin"
@@ -95,8 +100,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25sp"
+            android:layout_marginBottom="25sp"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
@@ -115,6 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:entries="@array/tipos_medidor"
+                android:minHeight="50sp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorTextLogin"
                 android:textSize="25sp" />
@@ -124,8 +130,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25sp"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
@@ -144,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:entries="@array/tipos_medidor"
+                android:minHeight="50sp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorTextLogin"
                 android:textSize="30sp" />
@@ -153,8 +160,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25sp"
+            android:layout_marginBottom="25sp"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
@@ -162,6 +169,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:layout_marginBottom="5sp"
                 android:layout_weight="1"
                 android:text="@string/nombre_almacen"
                 android:textColor="@color/colorTextLogin"
@@ -173,6 +182,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:entries="@array/tipos_medidor"
+                android:minHeight="50sp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorTextLogin"
                 android:textSize="30dp" />
@@ -182,17 +192,20 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15sp"
+        android:layout_marginBottom="15sp"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/registrar_button"
+            style="@style/SagasTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            style="@style/SagasTheme.Button"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/ripple_effect"
             android:minWidth="170dp"
             android:text="@string/registrar"
