--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_almacen.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_almacen.xml
@@ -19,7 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="15sp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="15sp"
                 android:paddingTop="25dp"
                 android:paddingBottom="15dp"
                 android:text="@string/toma_de_lectura_inicial"
@@ -31,8 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="25sp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="25dp"
+                android:layout_marginBottom="25sp"
                 android:text="@string/selecciona_almacen_principal"
                 android:textSize="24sp" />
 
@@ -42,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:minHeight="50sp"
                 android:padding="20dp" />
 
             <TextView
@@ -49,8 +53,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="15sp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="25dp"
+                android:layout_marginBottom="15sp"
                 android:text="@string/selecciona_el_tipo_de_medidor_porcentual"
                 android:textSize="24sp" />
 
@@ -60,25 +65,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:minHeight="50sp"
                 android:padding="20dp" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="200sp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp" />
 
             <Button
                 android:id="@+id/BtnLecturaAlamacenActivityGuardar"
+                style="@style/SagasTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
                 android:layout_marginLeft="85dp"
-                android:layout_marginRight="85dp"
                 android:layout_marginTop="15dp"
-                android:text="@string/message_acept"
+                android:layout_marginRight="85dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/ripple_effect"
-                style="@style/SagasTheme.Button"
+                android:padding="20sp"
+                android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
                 tools:ignore="UnusedAttribute" />
