--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
@@ -31,24 +31,23 @@
                 android:padding="20dp"
                 android:visibility="gone" />
 
-            <ScrollView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:scrollbars="vertical"
                 tools:ignore="NestedScrolling">
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <TableLayout
                         android:id="@+id/TLAnticipoTablaActivityTabla"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:isScrollContainer="true"
                         android:scrollbarStyle="outsideOverlay"
-                        android:scrollbars="horizontal"
-                        >
+                        android:scrollbars="horizontal">
 
                     </TableLayout>
                 </HorizontalScrollView>
@@ -80,6 +79,7 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15sp"
                         android:layout_weight="1"
                         android:text="@string/total"
                         android:textAlignment="textEnd"
@@ -89,6 +89,7 @@
                         android:id="@+id/TVAnticipoTablaActivityTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="15sp"
                         android:layout_weight="1"
                         android:text=""
                         android:textAlignment="textEnd"
@@ -107,6 +108,8 @@
                         android:id="@+id/textView3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="15sp"
+                        android:layout_marginEnd="15sp"
                         android:layout_weight="3"
                         android:text="@string/anticipar"
                         android:textAlignment="center"
@@ -125,7 +128,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15sp"
                         android:layout_marginRight="15dp"
+                        android:layout_marginBottom="15sp"
                         android:layout_weight="3"
                         android:ems="10"
                         android:inputType="numberDecimal"
@@ -150,7 +155,7 @@
                         android:id="@+id/textView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
@@ -172,7 +177,7 @@
                         android:id="@+id/textView5"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
@@ -200,7 +205,7 @@
                         android:id="@+id/textView7"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
@@ -222,7 +227,7 @@
                         android:id="@+id/textView9"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
@@ -250,7 +255,7 @@
                         android:id="@+id/textView11"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
@@ -289,10 +294,12 @@
 
                     <Button
                         android:id="@+id/BtnAnticipoTablaActivityRegresar"
+                        style="@style/SagasTheme.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:layout_weight="1"
-                        style="@style/SagasTheme.Button"
                         android:background="@drawable/ripple_effect"
                         android:text="@string/regresar"
                         android:textColor="@color/colorTextButtonLogin"
@@ -301,10 +308,12 @@
 
                     <Button
                         android:id="@+id/BtnAnticipoTablaActivityHacerAnticipo"
+                        style="@style/SagasTheme.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:layout_weight="1"
-                        style="@style/SagasTheme.Button"
                         android:background="@drawable/ripple_effect"
                         android:text="@string/hacer_anticipo"
                         android:textColor="@color/colorTextButtonLogin"
