--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_estacion.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_estacion.xml
@@ -19,7 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="10sp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="10sp"
                 android:paddingTop="15dp"
                 android:paddingBottom="5dp"
                 android:text="@string/carburaci_n_de_gas"
@@ -31,9 +33,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="5sp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
+                android:layout_marginBottom="5sp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_la_estaci_n_de_salida"
                 android:textSize="18sp" />
 
@@ -42,7 +46,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="5sp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="5sp"
                 android:padding="20dp" />
 
             <TextView
@@ -50,9 +56,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="5sp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
+                android:layout_marginBottom="5sp"
                 android:paddingTop="15dp"
+                android:paddingBottom="5dp"
                 android:text="@string/selecciona_la_unidad_de_entrada"
                 android:textSize="18sp" />
 
@@ -61,22 +69,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="5sp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="5sp"
                 android:padding="20dp" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="100sp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp" />
 
             <Button
                 android:id="@+id/BtnAutoconsumoActtivityGuardar"
+                style="@style/SagasTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="95dp"
                 android:layout_marginRight="95dp"
-                style="@style/SagasTheme.Button"
+                android:layout_marginBottom="10sp"
                 android:background="@drawable/ripple_effect"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
