--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
@@ -46,14 +46,16 @@
 
         <Button
             android:id="@+id/button_foto"
+            style="@style/SagasTheme.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/SagasTheme.Button"
-            android:background="@drawable/ripple_effect"
-            android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
-            android:text="@string/tomar_foto"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="5sp"
+            android:background="@drawable/ripple_effect"
             android:drawableStart="@mipmap/ic_camera"
+            android:padding="2sp"
+            android:text="@string/tomar_foto"
             tools:ignore="ObsoleteLayoutParam" />
 
     </LinearLayout>
@@ -88,9 +90,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
+                android:layout_margin="5sp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
                 android:background="@drawable/ripple_effect"
+                android:gravity="center_vertical"
                 android:text="@string/message_nitida_si"
                 android:textAlignment="center"
                 tools:ignore="ObsoleteLayoutParam" />
@@ -102,9 +105,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
+                android:layout_margin="5sp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
                 android:background="@drawable/ripple_effect"
+                android:gravity="center_vertical"
                 android:text="@string/message_nitida_no"
                 android:textAlignment="center"
                 android:textSize="14sp"
