--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
@@ -20,7 +20,7 @@
             <WebView
                 android:id="@+id/WVVerReporteActivityReporte"
                 android:layout_width="match_parent"
-                android:layout_height="399sp"
+                android:layout_height="390sp"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="8dp">
 
@@ -47,10 +47,11 @@
 
                 <Button
                     android:id="@+id/BtnReporteActivityImprimir"
+                    style="@style/SagasTheme.Button"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5sp"
                     android:layout_weight="2"
-                    style="@style/SagasTheme.Button"
                     android:background="@drawable/ripple_effect"
                     android:text="@string/imprimir_reporte"
                     android:textColor="@color/colorTextButtonLogin"
