--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,13 @@
                 <Spinner
                     android:id="@+id/spinner_gasera"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:layout_weight="0"
-                    android:paddingBottom="10dp"
+                    android:paddingBottom="20dp"
                     android:textColor="@color/colorTextLogin"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/input_layout_username"
