--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registrar_papeleta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registrar_papeleta.xml
@@ -40,7 +40,7 @@
             <Spinner
                 android:id="@+id/spinner_orden_compra_expedidor"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15sp"
                 android:layout_marginEnd="15sp"
                 android:paddingBottom="10dp"
@@ -61,7 +61,7 @@
             <Spinner
                 android:id="@+id/spinner_orden_compra_porteador"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15sp"
                 android:layout_marginEnd="15sp"
                 android:paddingBottom="10dp"
@@ -497,7 +497,7 @@
                 <Spinner
                     android:id="@+id/spinner_medidor_tractor"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/tipos_medidor"
                     android:textColor="@color/colorTextLogin"
