--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera_lectura.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera_lectura.xml
@@ -139,6 +139,7 @@
             <Button
                 android:id="@+id/BtnCameraLecturaFotoNitidaSi"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
@@ -151,6 +152,7 @@
             <Button
                 android:id="@+id/BtnCameraLecturaFotoNitidaNo"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
