--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/menu_list_item.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/CardMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1sp"
