--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -15,6 +15,23 @@
         $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
     }
 </script>
+<script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
+<script type="text/javascript">
+        $(function () {
+            $('select').on('change', function () {
+                //$('.tblfilterable tbody tr').each(function () {
+                debugger               
+
+                    var url = "/PrecioVenta/Index";
+                    var id = $('#empresas').find('option:selected').val();
+                    $.getJSON(url, { idEmpresa: id }, function (data) {
+                        var factor = data;
+                        $("#IdPrecioSalidaLt").val(factor)
+                    });
+                //});
+            });         
+        });
+</script>
 <!-- Page Loader -->
 <div class="page-loader-wrapper">
     <div class="loader">
@@ -166,7 +183,7 @@
                                 </div>
                                 <div class="blockquote-info blockquote btn-round">
                                     <div class="table-responsive" id="hide_divCat">
-                                        <table class="table table-striped table-hover" id="ItemList">
+                                        <table class="table table-striped table-hover tblfilterable" id="ItemList">
                                             <thead>
                                                 <tr>
                                                     <th>Rol</th>
