--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
@@ -1,5 +1,5 @@
-﻿@using MVC.Presentacion.Models.Catalogos
-@model  UsuarioDTO
+﻿@using MVC.Presentacion.Models.Seguridad
+@model  UsuarioRolModel
 
 @{
     ViewBag.Title = "Catálogo / Usuarios";
@@ -10,9 +10,11 @@
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
 <script type="text/javascript">
-    var message = '@ViewBag.MessageExito';
+    var message = '@ViewBag.Msj';
+    var tipo = '@ViewBag.Tipo';  
     if (message != '') {
-        $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
+
+        $(window).on("load", showNotification(tipo, message, 'top', 'center', '', ''));
     }
 </script>
 @using (Html.BeginForm("GuardarRol", "Usuarios", FormMethod.Post))
@@ -44,7 +46,7 @@
                                             <option value="0">Seleccione..</option>
                                             @foreach (var lst in ViewBag.AllRoles)
                                             {
-                                            <option value="@lst.IdRol">@lst.NombreRol</option>
+                                                <option value="@lst.IdRol">@lst.NombreRol</option>
                                             }
                                         </select>
                                     </div>
@@ -73,15 +75,15 @@
                                 {
                                     foreach (var item in @ViewBag.IdUser[0].Roles)
                                     {
-                                <tr>
-                                    <th>@item.NombreRol</th>
-                                    <td>
-                                        <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
-                                            <i class="material-icons">delete</i>
-                                            <span class="icon-name"></span>
-                                        </a>
-                                    </td>
-                                </tr>
+                                        <tr>
+                                            <th>@item.NombreRol</th>
+                                            <td>
+                                                <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
+                                                    <i class="material-icons">delete</i>
+                                                    <span class="icon-name"></span>
+                                                </a>
+                                            </td>
+                                        </tr>
                                     }
                                 }
                             </tbody>
@@ -113,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-            }          
+            }
         </div>
     </section>
 }
